--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
       </div>
             <div class="circulo">
-      	  		<img src="fotosp/pedro4.jpg" class="imagen"/><br>
+      	  		<img src="fotosp/Pedro4.jpg" class="imagen"/><br>
       	  		<h1>Oi, sou Pedro</h1><br><br> 	
         	    <h1>Ben vindo.</h1> 
     		</div>
